<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/menu_library" app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_refresh" android:title="@string/action_refresh" />
            <item android:id="@+id/action_history" android:title="@string/menu_history" />
        </menu>
    </item>
    <item android:title="@string/menu_tools" app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_torrent" android:title="@string/menu_torrent" />
            <item android:id="@+id/action_lan_cast" android:title="@string/menu_lan_cast" />
            <item android:id="@+id/action_manga_local" android:title="@string/menu_manga_local" />
            <item android:id="@+id/action_manga_online" android:title="@string/menu_manga_online" />
            <item android:id="@+id/action_ai" android:title="@string/menu_ai" />
            <item android:id="@+id/action_handy" android:title="@string/menu_handy" />
        </menu>
    </item>
    <item android:title="@string/menu_settings" app:showAsAction="never">
        <menu>
            <item android:id="@+id/action_privacy" android:title="@string/menu_privacy" />
            <item android:id="@+id/action_translate" android:title="@string/menu_translate" />
            <item android:id="@+id/action_language" android:title="@string/menu_language" />
            <item android:id="@+id/action_clean" android:title="@string/menu_clean" />
            <item android:id="@+id/action_update" android:title="@string/menu_update" />
        </menu>
    </item>
</menu>
